# ai-snake-docker

./: CMakeLists.txt  Dockerfile  nginx.conf  shell.html
src/: main.cpp
